
  HCAT-253 HBase revision manager should configure/drop znodes in the create/drop table meta hooks in the storage handler. (avandana via toffer)

  HCAT-259 Make readFields() and write() in LazyHCatRecord work (gates via khorgath)

  HCAT-194. Better error messages for HCatalog access control errors (julienledem via hashutosh)  
  
  OPTIMIZATIONS

  BUG FIXES
  HCAT-312 Hcatalog rpms change the ownership of /usr/lib64 to hcat user (gkesavan via gates)

  HCAT-301 Reading from a table created with upper case table name throws error. (rohini via toffer)

  HCAT-319 Cleanup of 0.3 mapred classes (khorgath via gates)

  HCAT-302 unable to write to hbase channel. HBaseHCatStorageHandler class not found (rohini via gates)

  HCAT-338 A couple of typos in the 0.4.0 document (gates)

  HCAT-335 Release notes issues for 0.4 (gates)

  HCAT-291 Pig and MR fail to write to a sequence file (avandana via gates)

  HCAT-305 hcat shell is not properly picking up the hcat jar (gates)

  HCAT-307 NOTICE and LICENSE file need updated to add new jars and move copyright date to 2012 (gates)

  HCAT-300 A number of files lack Apache license headers (gates)

  HCAT-299 Javadoc build issues (gates)

  HCAT-303 Fix build failure due to HBaseSerDe.parseColumnMapping method signature change in hive (rohini via toffer)

  HCAT-282 HCatInputFormat shouldn't expect storageHandler to be serializable (khorgath via gates)

  HCAT-281 HCat use table schema instead of partition schema to read partition data (daijy and khorgath via gates)

  HCAT 286 NPE in HdfsAuthorizationProvider (enis via gates)

  HCAT 290 Changes in HBase maven objects breaks hcat build (thw via gates)

  HCAT 280 part file name prefix with attempxxxx (daijy via gates)

  HCAT-275 JSON SerDe issues (khorgath via gates)

  HCAT-278 When outputSchema doesn't match table schema wrong columns are returned to the user (gates)
