@@ -627,7 +627,7 @@ public class HCatUtil {
     public static HiveConf getHiveConf(Configuration conf) 
       throws IOException {
 
-      HiveConf hiveConf = new HiveConf();
+      HiveConf hiveConf = new HiveConf(conf, HCatUtil.class);
 
       //copy the hive conf into the job conf and restore it
       //in the backend context
